fix code line 39

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <label for="form-message">Your message:</label>
                 </div>
                 <div>
-                    <textarea id="form-message" name="message" autofocus="on" required maxlength="200" />
+                    <textarea id="form-message" name="message" autofocus="on" required maxlength="200">
                     </textarea>
                 </div>
             </div>
